[gd_scene load_steps=4 format=2]

[ext_resource path="res://events/event3/altars-1.png.png" type="Texture" id=1]
[ext_resource path="res://events/event3/patreonEvent.gd" type="Script" id=2]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=3]

[node name="patreonEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="altars-1png" type="Sprite" parent="."]
position = Vector2( 512.576, 300.587 )
scale = Vector2( 64.0194, 37.3573 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.670588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 2.0
margin_right = 386.0
margin_bottom = 150.0
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 349.0
margin_top = 451.0
margin_right = 693.0
margin_bottom = 508.0
text = "MAKE AN OFFER! (lose 1 max hp and gain 100 coins)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 433.241
margin_top = 524.1
margin_right = 590.241
margin_bottom = 574.1
text = "ignore the altar"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="SkelBunny" parent="." instance=ExtResource( 3 )]
position = Vector2( -114.127, 252.632 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Button3" type="Button" parent="."]
margin_left = 349.0
margin_top = 451.0
margin_right = 693.0
margin_bottom = 571.0
text = "CONTINUE"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Button3" to="." method="_on_Button2_pressed"]
